MGS-1215 TASK correct spacing of "This publication is available to download in other formats" section

--- a/resources/scss/components/_component.file-icon.scss
+++ b/resources/scss/components/_component.file-icon.scss
@@ -48,7 +48,7 @@ $includeretina: true !default;
 @mixin icon-files($sizex, $sizey) {
   background: url('../images/icons/documents/gen_#{$sizex}px.png') no-repeat center center $color__white;
   @if $includeretina {
-    @include image-2x('../images/icons/gen_#{$sizex}px_@2x.png', #{$sizex}, #{$sizey});
+    @include image-2x('../images/icons/documents/gen_#{$sizex}px_@2x.png', #{$sizex}px, #{$sizey}px);
   }
 
   @each $filetypegroup in $filetypegroups {
@@ -57,7 +57,7 @@ $includeretina: true !default;
         background-image: url('../images/icons/documents/#{$extension}_#{$sizex}px.png');
 
         @if $includeretina {
-          @include image-2x('../images/icons/documents/#{$extension}_#{$sizex}px_@2x.png}', #{$sizex}, #{$sizey});
+          @include image-2x('../images/icons/documents/#{$extension}_#{$sizex}px_@2x.png}', #{$sizex}px, #{$sizey}px);
         }
       }
     }
