--- a/resources/scss/components/_component.publication-info.scss
+++ b/resources/scss/components/_component.publication-info.scss
@@ -6,8 +6,9 @@
   &__preamble {
     border: 1px dashed $color__grey--pale;
     border-width: 1px 0;
+    font-size: 14px;
     margin-bottom: 0;
-    min-height: 63px;
+    min-height: 79px;
     padding: 14px 0;
 
     &--icon {
@@ -19,11 +20,12 @@
   &__file-icon {
     left: 0;
     position: absolute;
-    top: 0;
+    top: 10px;
   }
 
   &__preamble-expand {
     font-weight: 700;
+    text-decoration: none;
     text-transform: uppercase;
   }
 
